# oi_python_othello

./: README.md  pyproject.toml
src/othello/: __init__.py  orig.py  renewal.py
